# stashr

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
src/: app.rs  args.rs  main.rs  ops.rs  stash.rs
test/: test-cmd.sh  test.sh
