[package]
name = "stashr"
version = "0.1.0"
edition = "2021"
description = "A dynamic move command or simple file stash"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
itertools = "0.11.0"
