[package]
name = "stashr"
version = "0.4.0"
edition = "2021"
description = "A dynamic move command or simple file stash"
license = "MIT"
repository = "https://github.com/sirno/stashr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
fs_extra = "1.3.0"
itertools = "0.11.0"
